Data collection for each actions

--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "cb13c7e2-2298-471a-8b8a-571842123e97",
    "metadata": {},
    "outputs": [],
@@ -166,11 +166,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0848e6f3-a4c9-4953-a5f2-48724efc5b95",
+   "execution_count": 46,
+   "id": "e2056ab9-0d18-4dda-bfe2-99a48fa74d65",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rh = np.array([[res.x, res.y, res.z] for res in results.right_hand_landmarks.landmark]).flatten() if results.right_hand_landmarks else np.zeros(21*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "34dc4b24-d70b-418f-bcdc-44bef3792705",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dae6688d-716a-4267-808a-f486a107195e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_keypoints(results):\n",
+    "    rh = np.array([[res.x, res.y, res.z] for res in results.right_hand_landmarks.landmark]).flatten() if results.right_hand_landmarks else np.zeros(21*3)\n",
+    "    return rh;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "248508ae-eac7-4817-a596-3c18f26653d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(63,)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extract_keypoints(results).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e5a184d0-9d5e-452d-b9d2-424eb97ee302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = os.path.join('MP_Data')                         \n",
+    "actions = np.array(['क', 'ख', 'ग', 'घ', 'ङ', 'च', 'छ', 'ज', 'झ', 'ञ', 'ट', 'ठ', 'ड', 'ढ', 'ण', 'त', 'थ', 'द', 'ध', 'न', 'प', 'फ', 'ब', 'भ', 'म', 'य', 'र', 'ल', 'व', 'श', 'ष', 'स', 'ह', 'क्ष', 'त्र', 'ज्ञ', 'अ', 'आ', 'इ', 'ई', 'उ', 'ऊ', 'ए', 'ऐ', 'ऒ', 'औ', 'अं', 'अः'])\n",
+    "no_sequences = 30\n",
+    "sequence_length = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2c23de86-9ed5-4569-ba06-b0bd1e6c683d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for action in actions:\n",
+    "    for sequence in range(no_sequences):\n",
+    "        try:\n",
+    "            os.makedirs(os.path.join(DATA_PATH, action, str(sequence)))\n",
+    "        except:\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a489f8-c72a-49e7-b16c-e2c0038b72c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:   \n",
+    "\n",
+    "    # Loop through actions\n",
+    "    for action in actions:\n",
+    "        for sequence in range(no_sequences):\n",
+    "            for frame_num in range(sequence_length):\n",
+    "    \n",
+    "                ret, frame = cap.read()\n",
+    "                \n",
+    "                image, results = mediapipe_detection(frame, holistic)\n",
+    "        \n",
+    "                draw_landmarks(frame, results)\n",
+    "\n",
+    "                # Collection logic\n",
+    "                if frame_num = 0:\n",
+    "                    cv2.putText(image, 'STARTING COLLECTION', (120,200),\n",
+    "                                cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 4, cv2.LINE_AA)\n",
+    "                    cv2.putText(image, 'Collecting frames for {} video number {}'.format(action,sequence) , (15,12),\n",
+    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 4, cv2.LINE_AA)\n",
+    "                    cv2.waitKey(2000)\n",
+    "                else:\n",
+    "                    cv2.putText(image, 'Collecting frames for {} video number {}'.format(action,sequence) , (15,12),\n",
+    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 4, cv2.LINE_AA)\n",
+    "                \n",
+    "                cv2.imshow('OpenCV',frame)\n",
+    "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
