--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -734,7 +734,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -748,7 +748,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dd8af32c537d165bf96d9b98c377e4fbaad64fe0526a0e060c73cf8ac424f233"
+   }
   }
  },
  "nbformat": 4,
