--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -83,10 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f8e0fdb2-807f-45e1-ab03-bbfaa27181b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From E:\\Maj-Project\\sign-lang-detection-using-lstm\\env\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "da93e753-65d0-4346-8931-2ecf8f6c2249",
    "metadata": {},
    "outputs": [],
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9fe0eb62-081a-4da4-8789-f006db0f23fe",
    "metadata": {},
    "outputs": [],
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "befcdad4-9c8a-4203-be58-811c0fd6e5d9",
    "metadata": {},
    "outputs": [],
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "cb13c7e2-2298-471a-8b8a-571842123e97",
    "metadata": {},
    "outputs": [],
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "e2056ab9-0d18-4dda-bfe2-99a48fa74d65",
    "metadata": {},
    "outputs": [],
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "34dc4b24-d70b-418f-bcdc-44bef3792705",
    "metadata": {},
    "outputs": [
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "dae6688d-716a-4267-808a-f486a107195e",
    "metadata": {},
    "outputs": [],
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "248508ae-eac7-4817-a596-3c18f26653d3",
    "metadata": {},
    "outputs": [
@@ -218,7 +227,7 @@
        "(63,)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "e5a184d0-9d5e-452d-b9d2-424eb97ee302",
    "metadata": {},
    "outputs": [],
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "2c23de86-9ed5-4569-ba06-b0bd1e6c683d",
    "metadata": {},
    "outputs": [],
@@ -277,21 +286,143 @@
     "                draw_landmarks(frame, results)\n",
     "\n",
     "                # Collection logic\n",
-    "                if frame_num = 0:\n",
+    "                if frame_num == 0:\n",
     "                    cv2.putText(image, 'STARTING COLLECTION', (120,200),\n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 4, cv2.LINE_AA)\n",
+    "                                cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 1, cv2.LINE_AA)\n",
     "                    cv2.putText(image, 'Collecting frames for {} video number {}'.format(action,sequence) , (15,12),\n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 4, cv2.LINE_AA)\n",
+    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
     "                    cv2.waitKey(2000)\n",
     "                else:\n",
     "                    cv2.putText(image, 'Collecting frames for {} video number {}'.format(action,sequence) , (15,12),\n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 4, cv2.LINE_AA)\n",
+    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
+    "\n",
+    "                keypoints = extract_keypoints(results)\n",
+    "                npy_path = os.path.join(DATA_PATH, action, str(sequence), str(frame_num))\n",
+    "                np.save(npy_path, keypoints)\n",
     "                \n",
     "                cv2.imshow('OpenCV',frame)\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
-    "            break\n",
+    "                if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "                    break\n",
     "    cap.release()\n",
     "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d8f3e57-a5dc-45af-a62e-f650b5cf3704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f8d33059-a6d0-449b-b838-25f77d2cbcb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "42e2cf91-2432-4b4f-b950-567c738bfc78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_map = {label:num for num, label in enumerate(actions)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ce7f53ba-00b7-4153-9a57-1cd5caef6732",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'क': 0,\n",
+       " 'ख': 1,\n",
+       " 'ग': 2,\n",
+       " 'घ': 3,\n",
+       " 'ङ': 4,\n",
+       " 'च': 5,\n",
+       " 'छ': 6,\n",
+       " 'ज': 7,\n",
+       " 'झ': 8,\n",
+       " 'ञ': 9,\n",
+       " 'ट': 10,\n",
+       " 'ठ': 11,\n",
+       " 'ड': 12,\n",
+       " 'ढ': 13,\n",
+       " 'ण': 14,\n",
+       " 'त': 15,\n",
+       " 'थ': 16,\n",
+       " 'द': 17,\n",
+       " 'ध': 18,\n",
+       " 'न': 19,\n",
+       " 'प': 20,\n",
+       " 'फ': 21,\n",
+       " 'ब': 22,\n",
+       " 'भ': 23,\n",
+       " 'म': 24,\n",
+       " 'य': 25,\n",
+       " 'र': 26,\n",
+       " 'ल': 27,\n",
+       " 'व': 28,\n",
+       " 'श': 29,\n",
+       " 'ष': 30,\n",
+       " 'स': 31,\n",
+       " 'ह': 32,\n",
+       " 'क्ष': 33,\n",
+       " 'त्र': 34,\n",
+       " 'ज्ञ': 35,\n",
+       " 'अ': 36,\n",
+       " 'आ': 37,\n",
+       " 'इ': 38,\n",
+       " 'ई': 39,\n",
+       " 'उ': 40,\n",
+       " 'ऊ': 41,\n",
+       " 'ए': 42,\n",
+       " 'ऐ': 43,\n",
+       " 'ऒ': 44,\n",
+       " 'औ': 45,\n",
+       " 'अं': 46,\n",
+       " 'अः': 47}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c2adf6c-fb80-42d0-b4d5-a89820370ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequences, labels = [], []\n",
+    "for action in actions:\n",
+    "    for sequence in range(no_sequences):\n",
+    "        window = []\n",
+    "        for frame_num in range(sequence_length):\n",
+    "            res = np.load(os.path.join(DATA_PATH, action, str(sequence), \"{}.npy\".format(frame_num)))\n",
+    "            window.append(res)\n",
+    "        sequences.append(window)\n",
+    "        labels.append(label_map[action])"
    ]
   }
  ],
