training and testing split

--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -424,6 +424,56 @@
     "        sequences.append(window)\n",
     "        labels.append(label_map[action])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "453d3ed1-38b0-47e0-8475-5db0cd1473e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(sequences).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a56a463-bb1f-4fd0-bd68-cb361681e408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(labels).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18123627-6438-4ee9-907e-1b6f3441e787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array(sequences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf324940-7efa-487b-88a2-2092f76e3be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = to_categorical(labels).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05f2a7d5-c09c-497f-892a-551a2fa61a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1"
+   ]
   }
  ],
  "metadata": {
