--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -472,8 +472,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f1b62b0c-9cd1-4a2b-b9a7-e22109a8efd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from tensorflow.keras.callbacks import TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cbd55e99-a3f8-4cc4-998e-237b1cc903db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From E:\\Maj-Project\\sign-lang-detection-using-lstm\\env\\lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(LSTM(64, return_sequences=True, activation='relu', input_shape=(30,1662)))\n",
+    "model.add(LSTM(128, return_sequences=True, activation='relu'))\n",
+    "model.add(LSTM(64, return_sequences=False, activation='relu'))\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dense(32, activation='relu'))\n",
+    "model.add(Dense(actions.shape[0], activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d544a0-fe71-46b5-996b-9a070b0229f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
