Real-time detection

--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -164,7 +164,7 @@
     "        \n",
     "        image, results = mediapipe_detection(frame, holistic)\n",
     "\n",
-    "        draw_landmarks(frame, results)\n",
+    "        draw_landmarks(image, results)\n",
     "        \n",
     "        cv2.imshow('OpenCV',frame)\n",
     "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
@@ -514,11 +514,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "08d544a0-fe71-46b5-996b-9a070b0229f1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From E:\\Maj-Project\\sign-lang-detection-using-lstm\\env\\lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='Adam', loss='categorical_crossentropy', metrics=['categorical_accuracy']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a6092a6-b31f-4d32-9b3b-4e447d754f08",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.fit(x_train, y_train, epochs=2000, callbacks=[tb_callback])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0a118579-f368-41a8-86fa-d3e6596b74d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lstm (LSTM)                 (None, 30, 64)            442112    \n",
+      "                                                                 \n",
+      " lstm_1 (LSTM)               (None, 30, 128)           98816     \n",
+      "                                                                 \n",
+      " lstm_2 (LSTM)               (None, 64)                49408     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 48)                1584      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 598160 (2.28 MB)\n",
+      "Trainable params: 598160 (2.28 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40c00ebb-1fa2-41d7-854d-d847830965f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "313f4399-6df0-4be5-9e73-b3466f72c657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actions[np.argmax(res[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3986ba78-24c4-4c84-ba15-1cbff4b1250e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actions[np.argmax(y_test[0])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa700962-e7d5-4819-b617-210097c1b194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('action.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee2af93a-8138-4c2d-b13c-e3bfff83cc00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model.load_weights('action.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "339e2a31-f3f3-406c-9eab-45bfb6330535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import multilabel_confusion_matrix, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae3c1037-214a-4dc5-b24f-7f16f0a975ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yhat = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ed95282-d72b-4641-94c7-4c4a72f6b769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ytrue = np.argmax(y_test, axis=1).tolist()\n",
+    "yhat = np.argmax(yhat, axis=1).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fcf5e00-1665-4122-b757-55bf77982642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multilevel_confusion_matrix(ytrue, yhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e6aa163-347d-4ab8-82cf-cc068d0f84a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_score(ytrue, yhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b77d9af-f3e7-48bd-870e-cb11b3fb5561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence = []\n",
+    "sentence = []\n",
+    "threshold = 0.4\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:   \n",
+    "    while cap.isOpened:\n",
+    "    \n",
+    "        ret, frame = cap.read()\n",
+    "        \n",
+    "        image, results = mediapipe_detection(frame, holistic)\n",
+    "\n",
+    "        draw_landmarks(image, results)\n",
+    "\n",
+    "        keypoints = extract_keypoints(results)\n",
+    "        sequence.append(keypoints)\n",
+    "        sequence = sequence[-30:]\n",
+    "\n",
+    "        if len(sequence) == 30:\n",
+    "            res = model.predict(np.expand_dims(sequence, axis=0))[0]\n",
+    "            print(actions[np.argmax(res)])\n",
+    "\n",
+    "        if res[np.argmax(res)] > threshold: \n",
+    "            if len(sentence) > 0: \n",
+    "                if actions[np.argmax(res)] != sentence[-1]:\n",
+    "                    sentence.append(actions[np.argmax(res)])\n",
+    "            else:\n",
+    "                sentence.append(actions[np.argmax(res)])\n",
+    "        if len(sentence) > 5: \n",
+    "            sentence = sentence[-5:]\n",
+    "        # Viz probabilities\n",
+    "        image = prob_viz(res, actions, image, colors)\n",
+    "\n",
+    "        cv2.rectangle(image, (0,0), (640, 40), (245, 117, 16), -1)\n",
+    "        cv2.putText(image, ' '.join(sentence), (3,30), \n",
+    "                       cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "        \n",
+    "        cv2.imshow('OpenCV',frame)\n",
+    "        \n",
+    "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
