--- a/training/model.ipynb
+++ b/training/model.ipynb
@@ -271,40 +271,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(0)\n",
-    "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:   \n",
+    "DATA_PATH = 'E:/actions'\n",
+    "for action in actions:\n",
+    "    for sequence in range(no_sequences):\n",
+    "        for frame_num in range(sequence_length):\n",
+    "            # Construct video file path\n",
+    "            video_path = os.path.join(DATA_PATH, str(action), str(sequence), f\"{frame_num}.mp4\")\n",
     "\n",
-    "    # Loop through actions\n",
-    "    for action in actions:\n",
-    "        for sequence in range(no_sequences):\n",
-    "            for frame_num in range(sequence_length):\n",
-    "    \n",
-    "                ret, frame = cap.read()\n",
-    "                \n",
-    "                image, results = mediapipe_detection(frame, holistic)\n",
-    "        \n",
-    "                draw_landmarks(frame, results)\n",
+    "            # Read video file\n",
+    "            cap = cv2.VideoCapture(video_path)\n",
     "\n",
-    "                # Collection logic\n",
-    "                if frame_num == 0:\n",
-    "                    cv2.putText(image, 'STARTING COLLECTION', (120,200),\n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 1, cv2.LINE_AA)\n",
-    "                    cv2.putText(image, 'Collecting frames for {} video number {}'.format(action,sequence) , (15,12),\n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
-    "                    cv2.waitKey(2000)\n",
-    "                else:\n",
-    "                    cv2.putText(image, 'Collecting frames for {} video number {}'.format(action,sequence) , (15,12),\n",
-    "                                cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
+    "            # Initialize mediapipe holistic\n",
+    "            with mp.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
+    "                while cap.isOpened():\n",
+    "                    ret, frame = cap.read()\n",
+    "                    if not ret:\n",
+    "                        break\n",
     "\n",
-    "                keypoints = extract_keypoints(results)\n",
-    "                npy_path = os.path.join(DATA_PATH, action, str(sequence), str(frame_num))\n",
-    "                np.save(npy_path, keypoints)\n",
-    "                \n",
-    "                cv2.imshow('OpenCV',frame)\n",
-    "                if cv2.waitKey(10) & 0xFF == ord('q'):\n",
-    "                    break\n",
-    "    cap.release()\n",
-    "    cv2.destroyAllWindows()"
+    "                    image, results = mediapipe_detection(frame, holistic)\n",
+    "                    draw_landmarks(frame, results)\n",
+    "\n",
+    "                    if frame_num == 0:\n",
+    "                        cv2.putText(image, 'STARTING COLLECTION', (120, 200),\n",
+    "                                    cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 0), 1, cv2.LINE_AA)\n",
+    "                        cv2.putText(image, f'Collecting frames for {action} video number {sequence}',\n",
+    "                                    (15, 12), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
+    "                        cv2.waitKey(2000)\n",
+    "                    else:\n",
+    "                        cv2.putText(image, f'Collecting frames for {action} video number {sequence}',\n",
+    "                                    (15, 12), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0, 0, 255), 1, cv2.LINE_AA)\n",
+    "\n",
+    "                    keypoints = extract_keypoints(results)\n",
+    "                    npy_path = os.path.join(DATA_PATH, action, str(sequence), str(frame_num))\n",
+    "                    np.save(npy_path, keypoints)\n",
+    "\n",
+    "                    cv2.imshow('OpenCV', frame)\n",
+    "                    if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "                        break\n",
+    "\n",
+    "                cap.release()\n",
+    "\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
@@ -734,7 +741,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -748,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.9.5"
   },
   "vscode": {
    "interpreter": {
