:rocket: [TRAIN] EfficientNetB0 Architecture

--- a/model/PyTorch_CNN_Nepali_Consonant.ipynb
+++ b/model/PyTorch_CNN_Nepali_Consonant.ipynb
@@ -384,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -424,7 +424,7 @@
         "id": "tr_3Nt3ALP8b",
         "outputId": "c6bd12c1-915a-41e0-8876-5acca98f19c8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
         "id": "dqQS469heJO6",
         "outputId": "d30a9f8c-e957-45ae-ef87-56cbf87d8741"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,7 +522,7 @@
         "id": "j6ASuUSOfYio",
         "outputId": "a94496ed-b42e-4930-9b12-6b4f3c303c26"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +571,7 @@
         "id": "WyMabeDGfmK8",
         "outputId": "80e87a22-b9d4-4c71-bda6-fbf13a404099"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,7 @@
         },
         "outputId": "417d164b-d6a8-4cdb-e558-65d6f689b6d9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +730,7 @@
         },
         "outputId": "b57ad5a7-7bcc-4f6d-cb35-58ed85947c58"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,7 +780,7 @@
         },
         "outputId": "98283b16-7e56-4bf6-8168-d90b8867dc27"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +817,7 @@
         },
         "outputId": "e93367bb-faac-462f-baa7-9b330ea087bc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -988,7 +988,7 @@
         },
         "outputId": "14a3029b-8a88-47b4-dc9f-9fef094d86e3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1058,7 +1058,7 @@
         },
         "outputId": "87a56b78-8e32-43fb-97e0-6cbe4a9015a3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1091,7 +1091,7 @@
         },
         "outputId": "d937a3c5-2fb9-4b07-e40e-e69bddf3e4e8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1135,7 +1135,7 @@
         },
         "outputId": "7760b4a9-30bd-450e-93d9-8f891d53f597"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1196,7 +1196,7 @@
         },
         "outputId": "b9890bad-af15-4081-d1cd-f634cd27231d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1232,7 +1232,7 @@
         },
         "outputId": "f5fae3bb-0660-470a-ec0e-67e93cf8664d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1286,7 +1286,7 @@
         },
         "outputId": "074c6752-6245-4c48-df4f-3ea0dd588620"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1317,7 +1317,7 @@
         },
         "outputId": "4d4dd496-0cab-4c99-f835-152aae218db4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1366,7 +1366,7 @@
         },
         "outputId": "d34475a1-cdf8-4866-fddb-fdea54128657"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1394,7 +1394,7 @@
         },
         "outputId": "a2fc045e-7664-4b04-d86e-f38bc41f0552"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1429,7 +1429,7 @@
         "id": "wtSV5pBArG7h",
         "outputId": "b7559bbd-83ef-43d0-a6cd-144a05e52f72"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1495,7 +1495,7 @@
         "id": "Yi-chjEKqGbR",
         "outputId": "f34a8c6d-b8f3-45b4-cf9b-19b1b6e37ba0"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,7 +1744,7 @@
         "id": "lokuTMi2q0RI",
         "outputId": "074e35c7-255e-4d42-a669-02995524565d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,13 +1822,12 @@
         "    # Adjust metrics to get average loss and accuracy per batch\n",
         "    test_loss = test_loss / len(dataloader)\n",
         "    test_acc = test_acc / len(dataloader)\n",
-        "    return test_loss, test_acc\n",
-        ""
+        "    return test_loss, test_acc"
       ],
       "metadata": {
         "id": "b3oXnFbYr6SL"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1868,7 +1867,7 @@
       "metadata": {
         "id": "uR1TTMXPsDEo"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1890,7 +1889,7 @@
       "metadata": {
         "id": "fat2UWQjsFNO"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1937,7 +1936,7 @@
         "id": "Ahv2G_vCsJyR",
         "outputId": "2532bc58-4192-4c9c-e024-cda3f582354c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1989,7 +1988,7 @@
         "id": "TQnQcddXtq-f",
         "outputId": "5f843626-1749-43c8-d14d-070f1557eeb9"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2038,7 +2037,7 @@
       "metadata": {
         "id": "WWnfy4B_ttp4"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2054,7 +2053,7 @@
         "id": "FwvoHxIZu5IY",
         "outputId": "04ee838f-aa3f-4333-c26a-f35745a34c96"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2102,7 +2101,7 @@
         "id": "KH3umAw4u7KN",
         "outputId": "154b36af-ed8a-4eb3-d5ea-82f151584653"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2131,7 +2130,7 @@
         "id": "p0DGHTf7u8k0",
         "outputId": "8677674e-c621-451a-e040-5d7a150e1b44"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2172,7 +2171,7 @@
       "metadata": {
         "id": "TSu8QkO2xNvu"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2191,7 +2190,7 @@
       "metadata": {
         "id": "cBrgs0byxhfT"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2206,7 +2205,7 @@
         "id": "ImcBbcmdxkNY",
         "outputId": "cea279c1-dc9c-447b-a80f-0677194bab07"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2232,7 +2231,7 @@
       "metadata": {
         "id": "PRrGa6P9xn7l"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2242,9 +2241,11 @@
         "nrows, ncols = 5, 6\n",
         "\n",
         "for i, sample in enumerate(test_samples):\n",
-        "  class_name = np.array(['क', 'ख', 'ग', 'घ', 'ङ', 'च', 'छ', 'ज', 'झ', 'ञ', 'ट', 'ठ',\n",
-        "                          'ड', 'ढ', 'ण', 'त', 'थ', 'द', 'ध', 'न', 'प', 'फ', 'ब', 'भ',\n",
-        "                          'म', 'य', 'र', 'ल', 'व', 'श', 'ष', 'स', 'ह', 'क्ष', 'त्र', 'ज्ञ'])\n",
+        "  class_name = np.array(['क', 'क्ष', 'ख', 'ग', 'घ', 'ङ', 'च',\n",
+        "                          'छ', 'ज', 'ज्ञ', 'झ', 'ञ', 'ट', 'ठ', 'ड', 'ढ',\n",
+        "                          'ण', 'त', 'त्र', 'थ', 'द', 'ध', 'न', 'प', 'फ',\n",
+        "                          'ब', 'भ', 'म', 'य', 'र', 'ल', 'व', 'श', 'ष',\n",
+        "                          'स', 'ह'])\n",
         "  plt.subplot(nrows, ncols, i + 1)\n",
         "  normalized_sample = sample.permute(1, 2, 0).numpy()\n",
         "  # normalized_sample = normalized_sample / 255.0\n",
@@ -2269,7 +2270,7 @@
         "id": "Kthhu-mLxqTG",
         "outputId": "82a56fb3-0c16-4a20-dbdd-bd95107f069d"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
